<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/itemRemoverFavorito"
        android:icon="@android:drawable/ic_delete"
        android:title="Remover Favorito"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/itemDetalhe"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/d_etalhe"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/itemEliminar"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/e_liminar"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/itemEditar"
        android:icon="@drawable/ic_create_black_24dp"
        android:title="@string/e_ditar"
        android:visible="false"
        app:showAsAction="ifRoom" />



</menu>