<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:showIn="@layout/activity_alterar_autor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    tools:context=".ui.AlterarAutor">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/n_ome"
        android:textColorHint="#9900BCD4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNome_autor_alterar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/a_no"
        android:textColorHint="#9900BCD4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAno_autor_alterar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="number"
            android:textColor="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/n_acionalidade"
        android:textColorHint="#9900BCD4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNacionalidade_autor_alterar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>