<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:showIn="@layout/activity_add_serie"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.AddSerie">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/n_ome"
        android:textColorHint="#9900BCD4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_nome_serie_inserir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/t_ipo"
        android:textColorHint="#9900BCD4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_tipo_serie_inserir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="Realizador"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#9900BCD4" />

    <Spinner
        android:id="@+id/spinnerCategorias_series_inserir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:spinnerMode="dialog" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="Categoria"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#9900BCD4" />

    <Spinner
        android:id="@+id/spinnerCategorias_ser_inserir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:spinnerMode="dialog" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/c_lassificacao"
        android:textColorHint="#9900BCD4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_classificacao_serie_inserir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="numberDecimal"
            android:textColor="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/a_no"
        android:textColorHint="#9900BCD4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_ano_serie_inserir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="number"
            android:textColor="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/t_emporadas"
        android:textColorHint="#9900BCD4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_temporadas_serie_inserir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="number"
            android:textColor="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/d_escricao"
        android:textColorHint="#9900BCD4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_descricao_serie_inserir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#9900BCD4"
        android:hint="Trailer da Série">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextLink_ser_inserir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_marginTop="8dp"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

</ScrollView>